--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-	<!-- Home -->
-	<div id="home-page">
-		<div id="home-text-box">
+<!-- Home -->
+	<div id="home">
+		<div class="home-text-box">
 			<h1>Hello, I'm <span class="emphasized">Lucas Lombardo</span></h1>
 			<h3>I'm a Front-end Web Developer</h3>
 			<div>
@@ -20,6 +20,22 @@
 			<br>
 			<br>
 		</div>
+	</div>
+
+<!-- About -->
+	<div id="about">
+		<h2>About</h2>
+		<h4>Self-driven front-end developer in Boston with a passion for building cool things.</h4>
+		<div>
+			<div>
+				<p>I’ve always enjoyed tackling new opportunities and learning new things. This was one of the traits that lead me to web development. I found that there is not much that is more fulfilling for me than taking a project from start to finish, and looking back at what I created.</p>
+				<p>When I’m not working towards making the web a better place, you can find me hiking in the great outdoors, exercising at my local gym, or snowboarding at one of the great mountains here in New England.</p>
+			</div>
+			<div>
+				<img src="images/grand_canyon_optimized.jpg">
+			</div>
+		<div>
+
 	</div>
 	<script type="text/javascript" src="js/portfolioSite.js"></script>
 </body>
