--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 </head>
 <body>
 
-
-
 <!-- Home -->
 	<div id="home">
 		<div class="home-text-box">
 			<h1>Hello, I'm <span class="emphasized">Lucas Lombardo</span></h1>
 			<h3>I'm a Front-end Web Developer</h3>
 			<div>
-				<button><a href="#">Continue</a></button>
+				<button><a href="#about-anchor">Continue</a></button>
 			</div>
 			<br>
 			<br>
@@ -26,18 +24,19 @@
 	</div>
 
 <!-- Navbar -->
-<div class="navbar">
-	<div class="content">
-		<a class="active" href="#">Lucas Lombardo</a>
-		<a href="#">About</a>
-		<a href="#">Projects</a>
-		<a href="#">Skills</a>
-		<a href="#">Education</a>
-		<a href="#">Contact</a>
+	<div class="navbar">
+		<div class="content">
+			<a class="active" href="#">Lucas Lombardo</a>
+			<a href="#">About</a>
+			<a href="#">Projects</a>
+			<a href="#">Skills</a>
+			<a href="#">Education</a>
+			<a href="#">Contact</a>
+		</div>
 	</div>
-</div>
 
 <!-- About -->
+	<span class="anchor" id="about-anchor"></span>
 	<div id="about">
 		<div class="container">
 			<div class="text">
@@ -53,6 +52,22 @@
 			</div>
 		</div>
 	</div>
+
+
+<!-- Projects -->
+	<div id="projects">
+		<div class="container">
+			<h2>Projects</h2>
+			<hr>
+			<div class="project-grid">
+				<div class="project"></div>
+				<div class="project"></div>
+				<div class="project"></div>
+				<div class="project"></div>
+			</div>
+		</div>
+	</div>
+
 	<script type="text/javascript" src="js/portfolioSite.js"></script>
 </body>
 </html>
