--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1>Hello, I'm <span class="emphasized">Lucas Lombardo</span></h1>
 			<h3>I'm a Front-end Web Developer</h3>
 			<div>
-				<button><a href="#about-anchor">Continue</a></button>
+				<button><a href="#about-anchor" id='smooth-scroll'>Continue</a></button>
 			</div>
 			<br>
 			<br>
@@ -55,6 +55,7 @@
 
 
 <!-- Projects -->
+	<span class="anchor" id="projects-anchor"></span>
 	<div id="projects">
 		<div class="container">
 			<h2>Projects</h2>
@@ -68,6 +69,35 @@
 		</div>
 	</div>
 
+<!-- Skills -->
+	<span class="anchor" id="skills-anchor"></span>
+	<div id="skills">
+		<div class="container">
+			<h2>Skills</h2>
+		</div>
+	</div>
+<!-- Education -->
+	<span class="anchor" id="education-anchor"></span>
+	<div id="education">
+		<div class="container">
+			<h2>Education</h2>
+		</div>
+	</div>
+
+<!-- Contact -->
+	<span class="anchor" id="contact-anchor"></span>
+	<div id="contact">
+		<div class="container">
+			<h2>Contact</h2>
+		</div>
+	</div>
+
+<!-- Footer -->
+	<div id="footer">
+		<p>Copyright © 2018 Lucas Lombardo. All rights reserved.</p>
+	</div>
+
+<!-- Scripts -->
 	<script type="text/javascript" src="js/portfolioSite.js"></script>
 </body>
 </html>
