add particles to home page

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
 
 <!-- Home -->
-	<div id="home" class="navsec">
+	<div id="home" class="navsec">	
 		<div class="home-text-box">
-			<h1>Hello, I'm <span class="emphasized">Lucas Lombardo</span></h1>
-			<h3>I'm a Front-end Web Developer</h3>
-			<div>
-				<button><a href="#about-anchor" id='smooth-scroll' class="anchor-btn">Continue</a></button>
+			<div class="vertical-align">
+				<h1>Hello, I'm <span class="emphasized">Lucas Lombardo</span></h1>
+				<h3>I'm a Front-end Web Developer</h3>
+				<a href="#about-anchor" id='smooth-scroll' class="anchor-btn">Continue</a>
 			</div>
-			<br>
-			<br>
+		</div>
+		<div id="particles">
 		</div>
 	</div>
 
@@ -98,7 +98,9 @@
 	</div>
 
 <!-- Scripts -->
+	<!-- jQuery 3.3.1 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.particleground.min.js"></script>
 	<script type="text/javascript" src="js/portfolioSite2.js"></script>
 </body>
 </html>
