add baseline projects and styling

--- a/index.html
+++ b/index.html
@@ -61,10 +61,92 @@
 			<h2>Projects</h2>
 			<hr>
 			<div class="project-grid">
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
+
+				<!-- Calculator Watch -->
+				<div class="project">
+					<a href="https://codepen.io/LucasLombardo/full/jzJgQK" target="_blank"><h3>Calculator Watch</h3></a>
+					<div class="img-container">
+						<a href="https://codepen.io/LucasLombardo/full/jzJgQK" target="_blank">
+						<div class="img-overlay"></div>
+						<img src="images/proj-calcwatch.png">
+						<div class="img-info">
+							<h3>View Project</h3>
+							<p>Functional calculator watch made using vanilla Javascript. Based off a classic design by Casio</p>
+						</div>
+						</a>
+					</div>
+					<div class="tech-tags">
+						<span>HTML5</span>
+						<span>CSS3</span>
+						<span>Javascript</span>
+						<span>Custom Font</span>
+					</div>
+				</div>
+
+				<!-- Wikipedia Search UI -->
+				<div class="project">
+					<a href="https://codepen.io/LucasLombardo/full/zWPbQg" target="_blank"><h3>Wikipedia Search UI</h3></a>
+					<div class="img-container">
+						<a href="https://codepen.io/LucasLombardo/full/zWPbQg" target="_blank">
+						<div class="img-overlay"></div>
+						<img src="images/proj-wikisearch.png">
+						<div class="img-info">
+							<h3>View Project</h3>
+							<p>Simple UI for searching Wikipedia; built using jQuery and the Wikipedia API</p>
+						</div>
+						</a>
+					</div>
+					<div class="tech-tags">
+						<span>HTML5</span>
+						<span>CSS3</span>
+						<span>Javascript</span>
+						<span>jQuery</span>
+						<span>APIs</span>
+					</div>
+				</div>
+
+				<!-- Color Game -->
+				<div class="project">
+					<a href="https://codepen.io/LucasLombardo/full/mLmWKB" target="_blank"><h3>RGB Color Game</h3></a>
+					<div class="img-container">
+						<a href="https://codepen.io/LucasLombardo/full/mLmWKB" target="_blank">
+						<div class="img-overlay"></div>
+						<img src="images/proj-colorgame.png">
+						<div class="img-info">
+							<h3>View Project</h3>
+							<p>Javascript game designed to practice guessing colors based off RGB values</p>
+						</div>
+						</a>
+					</div>
+					<div class="tech-tags">
+						<span>HTML5</span>
+						<span>CSS3</span>
+						<span>Javascript</span>
+					</div>
+				</div>
+
+				<!-- GoT Quotes -->
+				<div class="project">
+					<a href="https://codepen.io/LucasLombardo/full/RMVrJN" target="_blank"><h3>Game of Thrones Quotes</h3></a>
+					<div class="img-container">
+						<a href="https://codepen.io/LucasLombardo/full/RMVrJN" target="_blank">
+						<div class="img-overlay"></div>
+						<img src="images/proj-gotquotes.png">
+						<div class="img-info">
+							<h3>View Project</h3>
+							<p>Game of Thrones quotes generator made by using a quote bank API and jQuery</p>
+						</div>
+						</a>
+					</div>
+					<div class="tech-tags">
+						<span>HTML5</span>
+						<span>CSS3</span>
+						<span>Javascript</span>
+						<span>jQuery</span>
+						<span>APIs</span>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -101,6 +183,6 @@
 	<!-- jQuery 3.3.1 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.particleground.min.js"></script>
-	<script type="text/javascript" src="js/portfolioSite2.js"></script>
+	<script type="text/javascript" src="js/portfolioSite.js"></script>
 </body>
 </html>
