--- a/index.html
+++ b/index.html
@@ -148,15 +148,122 @@
 				</div>
 				
 			</div>
+			<br>
 		</div>
 	</div>
 
 <!-- Skills -->
 	<span class="anchor" id="skills-anchor"></span>
-	<div id="skills" class="section navsec">
-		<div class="container">
-			<h2>Skills</h2>
+	<div id="skills" class="section navsec">	
+		<div class="triangle-container">
+			<div class="triangle-title">
+				<h2>Skills</h2>
+			</div>
+			<div class="skills-content">
+			</div>
 		</div>
+
+		<div class="container">
+			<div class="skills-col1">
+
+				<h3>Structure/Styling</h3>
+				<div class="skill-box">
+					<div class="skill">
+						<img src="images/icon-html.svg">
+						<h4>HTML5</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-css.svg">
+						<h4>CSS3</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-sass.svg">
+						<h4>Sass</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-bootstrap.svg">
+						<h4>Bootstrap 4</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-semantic.svg">
+						<h4>SemanticUI</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-jsx.svg">
+						<h4>JSX</h4>
+					</div>
+				</div>
+
+				<h3>JavaScript</h3>
+				<div class="skill-box">
+					<div class="skill">
+						<img src="images/icon-javascript.svg">
+						<h4>JavaScript</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-jquery.svg">
+						<h4>jQuery</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-node.svg">
+						<h4>NodeJS</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-express.svg">
+						<h4>ExpressJS</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-jsx.svg">
+						<h4>ReactJS</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-passport.svg">
+						<h4>PassportJS</h4>
+					</div>
+				</div>
+
+				<h3>Other Tools</h3>
+				<div class="skill-box">
+					<div class="skill">
+						<img src="images/icon-git.svg">
+						<h4>Git</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-heroku.svg">
+						<h4>Heroku</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-mongo.svg">
+						<h4>MongoDB</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-photoshop.svg">
+						<h4>Photoshop</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-illustrator.svg">
+						<h4>Illustrator</h4>
+					</div>
+					<div class="skill">
+						<img src="images/icon-excel.svg">
+						<h4>Excel</h4>
+					</div>
+				</div>
+
+			</div>
+			<div class="skills-col2">
+				<img src="images/icon-teamwork.svg">
+				<h3>Teamwork</h3>
+				<p>I've had the opportunity to work with many teams in both academic and professional settings. I know how to work effectively with a group, keeping things moving forward while maintaining a high standard of quality work.</p>
+				<img src="images/icon-learning.svg">
+				<h3>Self Directed Learning</h3>
+				<p>I have a passion for learning that allows me to maintain focus for long periods of time even when no formal deadlines or tests are present.</p>
+				<img src="images/icon-communication.svg">
+				<h3>Communication</h3>
+				<p>I am adept at communicating effectively both internally and externally in a business setting. I keep business communication clear and concise to effectively get my point accross without wasting anyones valuable time.</p>
+			</div>
+		</div>
+
 	</div>
 <!-- Education -->
 	<span class="anchor" id="education-anchor"></span>
