add education and contact sections

--- a/index.html
+++ b/index.html
@@ -270,14 +270,49 @@
 	<div id="education" class="section navsec">
 		<div class="container">
 			<h2>Education</h2>
+			<hr>
+			<div class="school-box">
+				<h4 class="school-name">Boston University</h4> <h4 class="school-dates">Aug 2014 - May 2016</h4>
+				<h6>BA: Business Administration</h6>
+				<ul>
+					<li>Graduated Magma Cum Laude</li>
+					<li>Involved in several groups including the NCSH Honors Society, the Investment Club, and the Capital Management Club.</li>
+				</ul>
+			</div>
+		
+			<div class="school-box">
+				<h4 class="school-name">Northern Essex Community College</h4> <h4 class="school-dates">Aug 2012 - May 2014</h4>
+				<h6>Business Transfer Candidate</h6>
+				<ul>
+					<li>Involved in several groups including ABG Honors Society and the Leadership Development Program</li>
+					<li>Given Muller Norton Award for leadership as President of Beta Omicron chapter of ABG Honors society</li>
+				</ul>
+			</div>
 		</div>
 	</div>
+
+	<div id="triangle-transition">
+		<section class="triangles"></section>
+		<section></section>
+	</div>
+
 
 <!-- Contact -->
 	<span class="anchor" id="contact-anchor"></span>
 	<div id="contact" class="section navsec">
 		<div class="container">
 			<h2>Contact</h2>
+			<hr>
+			<h3>Thanks for checking out my website!</h3>
+			<h3>Please feel free to contact me with any questions or opportunities</h3>
+			<hr>
+			<form action="https://getsimpleform.com/messages?form_api_token=774c63f8bb6c2ffb17296de7f6d4dfdb" method="post">
+				<input type='hidden' name='redirect_to' value='http://google.com/' />
+				<input type="text" name="name" placeholder="NAME" required>
+				<input  type="email" name="email" placeholder="EMAIL" required>
+				<textarea name="content" placeholder="MESSAGE" required ></textarea>
+				<div><button name="send" type="submit" class="submit">SEND</button></div>
+			</form>
 		</div>
 	</div>
 
