add resume to about

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 				<hr>
 				<p>I’ve always enjoyed tackling new opportunities and learning new things. This was one of the traits that lead me to web development. I found that there is not much that is more fulfilling for me than taking a project from start to finish, and looking back at what I created.</p>
 				<p>When I’m not working towards making the web a better place, you can find me hiking in the great outdoors, exercising at my local gym, or snowboarding at one of the great mountains here in New England.</p>
+
+				<p>I am currently looking for opportunities in Web Development in the Greater Boston area. If you have any interest you can view my resume <a href="docs/Resume_LombardoLucas.pdf" download>HERE</a>.</p>
 			</div>
 			<div class="image">
 				<img src="images/grand_canyon_optimized.jpg">
