add social icons and organize icons

--- a/index.html
+++ b/index.html
@@ -171,27 +171,27 @@
 				<h3>Structure/Styling</h3>
 				<div class="skill-box">
 					<div class="skill">
-						<img src="images/icon-html.svg">
+						<img src="images/skills/icon-html.svg">
 						<h4>HTML5</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-css.svg">
+						<img src="images/skills/icon-css.svg">
 						<h4>CSS3</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-sass.svg">
+						<img src="images/skills/icon-sass.svg">
 						<h4>Sass</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-bootstrap.svg">
+						<img src="images/skills/icon-bootstrap.svg">
 						<h4>Bootstrap 4</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-semantic.svg">
+						<img src="images/skills/icon-semantic.svg">
 						<h4>SemanticUI</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-jsx.svg">
+						<img src="images/skills/icon-jsx.svg">
 						<h4>JSX</h4>
 					</div>
 				</div>
@@ -199,27 +199,27 @@
 				<h3>JavaScript</h3>
 				<div class="skill-box">
 					<div class="skill">
-						<img src="images/icon-javascript.svg">
+						<img src="images/skills/icon-javascript.svg">
 						<h4>JavaScript</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-jquery.svg">
+						<img src="images/skills/icon-jquery.svg">
 						<h4>jQuery</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-node.svg">
+						<img src="images/skills/icon-node.svg">
 						<h4>NodeJS</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-express.svg">
+						<img src="images/skills/icon-express.svg">
 						<h4>ExpressJS</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-jsx.svg">
+						<img src="images/skills/icon-jsx.svg">
 						<h4>ReactJS</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-passport.svg">
+						<img src="images/skills/icon-passport.svg">
 						<h4>PassportJS</h4>
 					</div>
 				</div>
@@ -227,46 +227,46 @@
 				<h3>Other Tools</h3>
 				<div class="skill-box">
 					<div class="skill">
-						<img src="images/icon-git.svg">
+						<img src="images/skills/icon-git.svg">
 						<h4>Git</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-heroku.svg">
+						<img src="images/skills/icon-heroku.svg">
 						<h4>Heroku</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-mongo.svg">
+						<img src="images/skills/icon-mongo.svg">
 						<h4>MongoDB</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-photoshop.svg">
+						<img src="images/skills/icon-photoshop.svg">
 						<h4>Photoshop</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-illustrator.svg">
+						<img src="images/skills/icon-illustrator.svg">
 						<h4>Illustrator</h4>
 					</div>
 					<div class="skill">
-						<img src="images/icon-excel.svg">
+						<img src="images/skills/icon-excel.svg">
 						<h4>Excel</h4>
 					</div>
 				</div>
 
 			</div>
 			<div class="skills-col2">
-				<img src="images/icon-teamwork.svg">
+				<img src="images/skills/icon-teamwork.svg">
 				<h3>Teamwork</h3>
 				<p>I've had the opportunity to work with many teams in both academic and professional settings. I know how to work effectively with a group, keeping things moving forward while maintaining a high standard of quality work.</p>
-				<img src="images/icon-learning.svg">
+				<img src="images/skills/icon-learning.svg">
 				<h3>Self Directed Learning</h3>
 				<p>I have a passion for learning that allows me to maintain focus for long periods of time even when no formal deadlines or tests are present.</p>
-				<img src="images/icon-communication.svg">
+				<img src="images/skills/icon-communication.svg">
 				<h3>Communication</h3>
 				<p>I am adept at communicating effectively both internally and externally in a business setting. I keep business communication clear and concise to effectively get my point accross without wasting anyones valuable time.</p>
 			</div>
 		</div>
-
 	</div>
+
 <!-- Education -->
 	<span class="anchor" id="education-anchor"></span>
 	<div id="education" class="section navsec">
@@ -275,7 +275,7 @@
 			<hr>
 			<div class="school-box">
 				<h4 class="school-name">Boston University</h4> <h4 class="school-dates">Aug 2014 - May 2016</h4>
-				<h6>BA: Business Administration</h6>
+				<h6>Bachelor of Science in Business Administration</h6>
 				<ul>
 					<li>Graduated Magma Cum Laude</li>
 					<li>Involved in several groups including the NCSH Honors Society, the Investment Club, and the Capital Management Club.</li>
@@ -320,6 +320,20 @@
 
 <!-- Footer -->
 	<div id="footer">
+		<div class="social-icons">
+			<a href="https://github.com/LucasLombardo" target="_blank">
+				<div class="social"><div class="icon"><img src="images/social/icon-github.svg"></div><p>Github</p></div>
+			</a>
+			<a href="https://www.linkedin.com/lombardol" target="_blank">
+				<div class="social"><div class="icon"><img src="images/social/icon-linkedin.svg"></div><p>LinkedIn</p></div>
+			</a>
+			<a href="https://codepen.io/LucasLombardo/" target="_blank">
+				<div class="social"><div class="icon"><img src="images/social/icon-codepen.svg"></div><p>CodePen</p></div>
+			</a>
+			<a href="https://www.codewars.com/users/LucasLombardo" target="_blank">
+				<div class="social"><div class="icon"><img src="images/social/icon-codewars.svg"></div><p>CodeWars</p></div>
+			</a>
+		</div>
 		<p>Copyright © 2018 Lucas Lombardo. All rights reserved.</p>
 	</div>
 
