--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 
 <!-- Navbar -->
-	<div class="navbar">
+<!-- 	<div class="navbar">
 		<div class="content">
 			<a class= "active anchor-btn" href="#home">Lucas Lombardo</a>
 			<a class = "anchor-btn" href="#about-anchor">About</a>
@@ -32,6 +32,29 @@
 			<a class = "anchor-btn" href="#skills-anchor">Skills</a>
 			<a class = "anchor-btn" href="#education-anchor">Education</a>
 			<a class = "anchor-btn" href="#contact-anchor">Contact</a>
+		</div>
+	</div> -->
+
+	<div class="nav">
+		<div class="nav-header">
+			<div class="nav-title">
+				<a href="#home" class="anchor-btn" onclick="collapseNav()">Lucas Lombardo</a>
+			</div>
+		</div>
+		<div class="nav-btn">
+			<label for="nav-check">
+	    		<span></span>
+	    		<span></span>
+	    		<span></span>
+			</label>
+		</div>
+		<input type="checkbox" id="nav-check">
+		<div class="nav-links">
+			<a class = "anchor-btn" href="#about-anchor" onclick="collapseNav()">About</a>
+			<a class = "anchor-btn" href="#projects-anchor" onclick="collapseNav()">Projects</a>
+			<a class = "anchor-btn" href="#skills-anchor" onclick="collapseNav()">Skills</a>
+			<a class = "anchor-btn" href="#education-anchor" onclick="collapseNav()">Education</a>
+			<a class = "anchor-btn" href="#contact-anchor" onclick="collapseNav()">Contact</a>
 		</div>
 	</div>
 
