change particalground to particles.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="#about-anchor" id='smooth-scroll' class="anchor-btn">Continue</a>
 			</div>
 		</div>
-		<div id="particles">
+		<div id="particles-js">
 		</div>
 	</div>
 
@@ -59,7 +59,7 @@
 			<p>I’ve always enjoyed tackling new opportunities and learning new things. This was one of the traits that lead me to web development. I found that there is not much that is more fulfilling for me than taking a project from start to finish, and looking back at what I created.</p>
 			<p>When I’m not working towards making the web a better place, you can find me hiking in the great outdoors, exercising at my local gym, or snowboarding at one of the great mountains here in New England.</p>
 
-			<p>I am currently looking for opportunities in Web Development in the Greater Boston area. If you have any interest you can view my resume <a href="docs/Resume_LombardoLucas.pdf" download>HERE</a>.</p>
+			<p>I am currently looking for opportunities in Web Development in the Greater Boston area. If you have any interest you can view my resume <strong><a href="docs/Resume_LombardoLucas.pdf" download>HERE</a><strong>.</p>
 			
 		</div>
 	</div>
@@ -200,8 +200,8 @@
 						<h4>SemanticUI</h4>
 					</div>
 					<div class="skill">
-						<img src="images/skills/icon-jsx.svg">
-						<h4>JSX</h4>
+						<!-- <img src="images/skills/icon-jsx.svg">
+						<h4>JSX</h4> -->
 					</div>
 				</div>
 
@@ -223,13 +223,14 @@
 						<img src="images/skills/icon-express.svg">
 						<h4>ExpressJS</h4>
 					</div>
-					<div class="skill">
-						<img src="images/skills/icon-jsx.svg">
-						<h4>ReactJS</h4>
-					</div>
+
 					<div class="skill">
 						<img src="images/skills/icon-passport.svg">
 						<h4>PassportJS</h4>
+					</div>
+					<div class="skill">
+					<!-- <img src="images/skills/icon-jsx.svg">
+						<h4>ReactJS</h4> -->
 					</div>
 				</div>
 
@@ -350,9 +351,8 @@
 	</div>
 
 <!-- Scripts -->
-	<!-- jQuery 3.3.1 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.particleground.min.js"></script>
+	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<script type="text/javascript" src="js/portfolioSite.js"></script>
 </body>
 </html>
