minor changes, update issue tracker

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio Site</title>
+	<title>Lucas Lombardo - Portfolio Site</title>
 	<link rel="preload" href="css/styles.css" as="style">
 	<link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="css/styles.css"></noscript>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" href="images/temp-icon.png">
 </head>
 <body>
 
@@ -211,7 +212,7 @@
 						<h4>JavaScript</h4>
 					</div>
 					<div class="skill">
-						<img src="images/skills/icon-jquery.svg">
+						<img src="images/skills/icon-jQuery.svg">
 						<h4>jQuery</h4>
 					</div>
 					<div class="skill">
@@ -311,13 +312,14 @@
 <!-- Contact -->
 	<span class="anchor" id="contact-anchor"></span>
 	<div id="contact" class="section navsec">
+		<iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
 		<div class="container">
 			<h2>Contact</h2>
 			<hr>
 			<h3>Thanks for checking out my website!</h3>
 			<h3>Please feel free to contact me with any questions or opportunities</h3>
 			<hr>
-			<form id="contact-form">
+			<form id="contact-form" action="https://getsimpleform.com/messages?form_api_token=774c63f8bb6c2ffb17296de7f6d4dfdb" method="post" target="dummyframe">
 				<input type="text" name="name" placeholder="NAME" required>
 				<input  type="email" name="email" placeholder="EMAIL" required>
 				<textarea name="content" placeholder="MESSAGE" required ></textarea>
