add Superhero reviews project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<noscript><link rel="stylesheet" href="css/styles.css"></noscript>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" href="images/temp-icon.png">
+	<link rel="icon" href="images/ll-favicon2.png">
 </head>
 <body>
 
@@ -60,7 +60,7 @@
 			<p>I’ve always enjoyed tackling new opportunities and learning new things. This was one of the traits that lead me to web development. I found that there is not much that is more fulfilling for me than taking a project from start to finish, and looking back at what I created.</p>
 			<p>When I’m not working towards making the web a better place, you can find me hiking in the great outdoors, exercising at my local gym, or snowboarding at one of the great mountains here in New England.</p>
 
-			<p>I am currently looking for opportunities in Web Development in the Greater Boston area. If you have any interest you can view my resume <strong><a href="docs/Resume_LombardoLucas.pdf" download>HERE</a><strong>.</p>
+			<p>I am currently looking for opportunities in Web Development in the Greater Boston area. If you have any interest you can view my resume <strong><a href="docs/Resume_LombardoLucas.pdf" download>HERE</a></strong>.</p>
 		</div>
 	</div>
 
@@ -72,6 +72,32 @@
 			<h2>Projects</h2>
 			<hr>
 			<div class="project-grid">
+
+				<!-- Superhero Reviews -->
+				<div class="project">
+					<a href="https://superheroreviews.herokuapp.com" target="_blank"><h3>Superhero Reviews</h3></a>
+					<div class="img-container">
+						<a href="https://superheroreviews.herokuapp.com" target="_blank">
+						<div class="img-overlay"></div>
+						<img src="images/proj-shreviews.png">
+						<div class="img-info">
+							<h3>View Project</h3>
+							<p>Yelp like web app for citizens to review their favorite superheroes.</p>
+						</div>
+						</a>
+					</div>
+					<div class="tech-tags">
+						<span>HTML5</span>
+						<span>CSS3</span>
+						<span>JavaScript</span>
+						<span>Express</span>
+						<span>Bootstrap 4</span>
+						<span>NodeJS</span>
+						<span>MongoDB</span>
+						<span>PassportJS</span>
+						<span>APIs</span>
+					</div>
+				</div>
 
 				<!-- Calculator Watch -->
 				<div class="project">
@@ -89,7 +115,7 @@
 					<div class="tech-tags">
 						<span>HTML5</span>
 						<span>CSS3</span>
-						<span>Javascript</span>
+						<span>JavaScript</span>
 						<span>Custom Font</span>
 					</div>
 				</div>
@@ -110,7 +136,7 @@
 					<div class="tech-tags">
 						<span>HTML5</span>
 						<span>CSS3</span>
-						<span>Javascript</span>
+						<span>JavaScript</span>
 						<span>jQuery</span>
 						<span>APIs</span>
 					</div>
@@ -137,7 +163,7 @@
 				</div>
 
 				<!-- GoT Quotes -->
-				<div class="project">
+<!-- 				<div class="project">
 					<a href="https://codepen.io/LucasLombardo/full/RMVrJN" target="_blank"><h3>Game of Thrones Quotes</h3></a>
 					<div class="img-container">
 						<a href="https://codepen.io/LucasLombardo/full/RMVrJN" target="_blank">
@@ -156,7 +182,7 @@
 						<span>jQuery</span>
 						<span>APIs</span>
 					</div>
-				</div>
+				</div> -->
 				
 			</div>
 			<br>
