add angled transitions to body of site

--- a/index.html
+++ b/index.html
@@ -66,13 +66,22 @@
 
 
 <!-- Projects -->
+
+
+
+
 	<span class="anchor" id="projects-anchor"></span>
 	<div id="projects" class="section navsec">
-		<div class="container">
-			<h2>Projects</h2>
-			<hr>
-			<div class="project-grid">
+		<div class="triangle-container">
+			<div class="triangle-title">
+				<h2>Projects</h2>
+			</div>
+			<div class="projects-content">
+			</div>
+		</div>
 
+		<div class="container">
+			<div class="project-grid">
 				<!-- Superhero Reviews -->
 				<div class="project">
 					<a href="https://superheroreviews.herokuapp.com" target="_blank"><h3>Superhero Reviews</h3></a>
@@ -304,11 +313,18 @@
 	</div>
 
 <!-- Education -->
+
 	<span class="anchor" id="education-anchor"></span>
 	<div id="education" class="section navsec">
-		<div class="container">
-			<h2>Education</h2>
-			<hr>
+		<div class="triangle-container">
+			<div class="triangle-title">
+				<h2>Education</h2>
+			</div>
+			<div class="education-content">
+			</div>
+		</div>
+
+		<div class="container">	
 			<div class="school-box">
 				<h4 class="school-name">Boston University</h4> <h4 class="school-dates">Aug 2014 - May 2016</h4>
 				<h6>Bachelor of Science in Business Administration</h6>
