--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Lucas Lombardo - Portfolio Site</title>
-	<link rel="preload" href="css/styles.css" as="style">
+<!-- 	<link rel="preload" href="css/styles.css" as="style">
 	<link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/styles.css"></noscript>
+	<noscript><link rel="stylesheet" href="css/styles.css"></noscript> -->
+	<link rel="stylesheet" href="css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="images/ll-favicon2.png">
