set max width and fix minor typos/alignment

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
 <head>
 	<title>Lucas Lombardo - Portfolio Site</title>
-<!-- 	<link rel="preload" href="css/styles.css" as="style">
-	<link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/styles.css"></noscript> -->
 	<link rel="stylesheet" href="css/styles.css">
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="images/ll-favicon2.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
 </head>
 <body>
 
@@ -330,7 +327,7 @@
 				<h4 class="school-name">Boston University</h4> <h4 class="school-dates">Aug 2014 - May 2016</h4>
 				<h6>Bachelor of Science in Business Administration</h6>
 				<ul>
-					<li>Graduated Magma Cum Laude</li>
+					<li>Graduated Magna Cum Laude</li>
 					<li>Involved in several groups including the NCSH Honor Society, the Investment Club, and the Capital Management Club.</li>
 				</ul>
 			</div>
