push in lombardo graphics project

--- a/index.html
+++ b/index.html
@@ -80,6 +80,29 @@
 
 		<div class="container">
 			<div class="project-grid">
+				<!-- Wikipedia Search UI -->
+				<div class="project">
+						<a href="https://lombardographics.com" target="_blank"><h3>Lombardo Graphics Website</h3></a>
+						<div class="img-container">
+							<a href="https://lombardographics.com" target="_blank">
+							<div class="img-overlay"></div>
+							<img src="images/proj-lombardog.jpg">
+							<div class="img-info">
+								<h3>View Project</h3>
+								<p>Website for a vehicle graphics and lettering company. Built using ReactJS, GatsbyJS, and GraphQL.</p>
+							</div>
+							</a>
+						</div>
+						<div class="tech-tags">
+							<span>ReactJS</span>
+							<span>JSX</span>
+							<span>CSS3</span>
+							<span>GatsbyJS</span>
+							<span>GraphQL</span>
+							<span>APIs</span>
+						</div>
+					</div>
+
 				<!-- Superhero Reviews -->
 				<div class="project">
 					<a href="https://superheroreviews.herokuapp.com" target="_blank"><h3>Superhero Reviews</h3></a>
@@ -150,7 +173,7 @@
 				</div>
 
 				<!-- Color Game -->
-				<div class="project">
+				<!-- <div class="project">
 					<a href="https://codepen.io/LucasLombardo/full/mLmWKB" target="_blank"><h3>RGB Color Game</h3></a>
 					<div class="img-container">
 						<a href="https://codepen.io/LucasLombardo/full/mLmWKB" target="_blank">
@@ -167,7 +190,7 @@
 						<span>CSS3</span>
 						<span>Javascript</span>
 					</div>
-				</div>
+				</div> -->
 
 				<!-- GoT Quotes -->
 <!-- 				<div class="project">
@@ -233,8 +256,8 @@
 						<h4>SemanticUI</h4>
 					</div>
 					<div class="skill">
-						<!-- <img src="images/skills/icon-jsx.svg">
-						<h4>JSX</h4> -->
+						<img src="images/skills/icon-jsx.svg">
+						<h4>JSX</h4>
 					</div>
 				</div>
 
@@ -262,8 +285,8 @@
 						<h4>PassportJS</h4>
 					</div>
 					<div class="skill">
-					<!-- <img src="images/skills/icon-jsx.svg">
-						<h4>ReactJS</h4> -->
+					<img src="images/skills/icon-jsx.svg">
+						<h4>ReactJS</h4>
 					</div>
 				</div>
 
